--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.ts"
+    ]
+  },
   "name": "bd-react-simple-modal",
   "author": "bdelanls",
   "module": "dist/bd-react-simple-modal.esm.js",
@@ -48,9 +53,12 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^11.1.4",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "husky": "^9.1.4",
+    "identity-obj-proxy": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup-plugin-postcss": "^4.0.2",
